<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />


        <ImageView
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/app_logo_desc"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/nameInput"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/emailInput"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/registerButton"
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp" />


    </LinearLayout>
</ScrollView>
